kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: cloudnativemu
  name: cloudnativemu
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cloudnativemu
status:
  loadBalancer: {}
